--- a/config.sample.toml
+++ b/config.sample.toml
@@ -8,7 +8,7 @@ name = "my-service"
 [broker]
 # Connection string. This must include the username
 # and password (if any), the host and the port.
-uri = "amqp://guest:guest@localhost:15672"
+uri = "amqp://guest:guest@localhost:5672"
 
 [http]
 listen_to_hosts = [] # Empty list will listen to all hosts
@@ -25,5 +25,5 @@ listen_port = 18130
 
 [message]
 # Time in seconds we will wait for the response of the message.
-receive_timeout = 10
+#receive_timeout = 10
 
