--- a/config.sample.toml
+++ b/config.sample.toml
@@ -15,6 +15,8 @@ listen_to_hosts = [] # Empty list will listen to all hosts
 # If you need just to listen to a single or a few IP addresses:
 #listen_to_hosts = ["127.0.0.1", "<otherip>"]
 listen_port = 8130
+# We'll forward all incoming requests as HTTP calls to this host.
+fwd_host = "http://localhost:8080"
 
 [dashboard]
 enabled = true
