--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ services:
 notifications:
   email: false
 
+install:
+  - go get github.com/golang/dep/cmd/dep
+  - dep ensure
+
 script:
   - go test ./...
 
